# satysfi-class-biol-shinkan23-pamphlet

./: README.md  Satyristes  satysfi-class-biol-shinkan23-pamphlet-doc.opam  satysfi-class-biol-shinkan23-pamphlet.opam
.devcontainer/: Dockerfile  devcontainer.json
doc/: manual.saty
src/: class-biol-shinkan23-pamphlet-toc.satyh  class-biol-shinkan23-pamphlet.satyh  dic.satyh  toc.satyh
