opam-version: "2.1.4"
name: "satysfi-class-biol-shinkan23-pamphlet-doc"
version: "0.0.1"
synopsis: "A SATySFi Class File For Welcome Pamphlet"
description: """
A class file for biol new students welcome pamphlet 2023
"""
maintainer: "Keiki Shimamura <deltawww.pc@gmail.com> and Mutsuha Asada <mail@momee.mt> and Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Keiki Shimamura <deltawww.pc@gmail.com> and Mutsuha Asada <mail@momee.mt> and Naoki Kaneko <puripuri2100@gmail.com>"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/dolceWFC/satysfi-class-biol-shinkan23-pamphlet"
dev-repo: "git+https://github.com/dolceWFC/satysfi-class-biol-shinkan23-pamphlet.git"
bug-reports: "https://github.com/dolceWFC/satysfi-class-biol-shinkan23-pamphlet/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.9" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-class-biol-shinkan23-pamphlet" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-lipsum" { >= "0.2.0" & < "0.3.0" }
  "satysfi-latexcmds" { >= "0.1.0" & < "0.2.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "class-biol-shinkan23-pamphlet-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "class-biol-shinkan23-pamphlet-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
