opam-version: "2.0"
name: "satysfi-class-biol-shinkan23-pamphlet"
version: "0.0.1"
synopsis: "A SATySFi Class File For Welcome Pamphlet"
description: """
A class file for biol new students welcome pamphlet 2023
"""
maintainer: "Keiki Shimamura <deltawww.pc@gmail.com> and Mutsuha Asada <mail@momee.mt> and Naoki Kaneko <puripuri2100@gmail.com>"
authors: "gfngfn, matsud224, nekketsuuu, Keiki Shimamura <deltawww.pc@gmail.com> and Mutsuha Asada <mail@momee.mt> and Naoki Kaneko <puripuri2100@gmail.com>"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/dolceWFC/satysfi-class-biol-shinkan23-pamphlet"
dev-repo: "git+https://github.com/dolceWFC/satysfi-class-biol-shinkan23-pamphlet.git"
bug-reports: "https://github.com/dolceWFC/satysfi-class-biol-shinkan23-pamphlet/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.9" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base" { >= "1.3.0" & < "2.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "class-biol-shinkan23-pamphlet"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "class-biol-shinkan23-pamphlet"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
